--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,30 @@
 __pycache__/
 *.py[cod]
 *$py.class
+.DS_Store
 
 # C extensions
 *.so
+db/chroma/*
+!db/chroma/
+
+tutorials/
+data/pdf/*.pdf
+data/extracted_texts/*
+!data/extracted_texts/__init__.py
+data/fees_summaries/*
+!data/fees_summaries/__init__.py
+data/improved_texts/*
+!data/improved_texts/__init__.py
+data/pdfs/splitted/*
+!data/pdfs/splitted/__init__.py
+data/pdfs/raw/*
+!data/pdfs/raw/__init__.py
+!data/pdfs/__init__.py
+data/summarized_pages/*
+!data/summarized_pages/__init__.py
+
+
 
 # Distribution / packaging
 .Python
@@ -14,7 +35,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
