--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pdf2image = "^1.17.0"
 streamlit-pdf-viewer = "^0.0.8"
 langchain = "^0.1.12"
 chromadb = "^0.4.24"
+openpyxl = "^3.1.2"
 
 
 [build-system]
